@@ -1,0 +1,4 @@
+>=python3.1
+wsgi compatible server
+dev-db/mongodb ( http://www.mongodb.org/downloads )
+mongodb-python3-driver ( git clone git://github.com/sovnarkom/mongo-python3-driver.git pymongo && cd pymongo && python setup.py --no_ext install )
